<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:background="@drawable/shape_standard_whole">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:gravity="center">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/dialog_standard"
            android:layout_marginRight="20dp"/>
        <TextView
            android:id="@id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogtitle"
            android:textColor="#ffffff"
            android:textSize="18sp"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/tv_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15dp"
        android:textSize="15sp"
        android:textColor="#ffffff"
        android:text="@string/dialogcontent"/>
    <View 
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff"/>
    <LinearLayout 
        
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <Button 
            android:id="@id/bt_cancel_standarddialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_bt_standard_cancel"
            android:text="@string/cancel"
            android:textColor="#ffffff"/>
        <View 
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#ffffff"/>
        <Button 
            android:id="@id/bt_confirm_standarddialog"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="#ffffff"
            android:background="@drawable/selector_bt_standard_confirml"
            android:text="@string/confirm"/>
    </LinearLayout>
    
</LinearLayout>
