<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@id/bt_add_newfr"
            style="@style/container_tabpage">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/add_new_friend72"/>
            <TextView
                style="@style/clickable_videopage"
                android:text="@string/newfr"/>
        </LinearLayout>
        <LinearLayout
            android:id="@id/bt_add_newgroup"
            style="@style/container_tabpage">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/add_new_group72"/>
            <TextView
                style="@style/clickable_videopage"
                android:text="@string/newgroup"/>
        </LinearLayout>
        <LinearLayout
            android:id="@id/bt_add_hongbao"
            style="@style/container_tabpage">
            <ImageView
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/add_hongbao72"/>
            <TextView
                style="@style/clickable_videopage"
                android:text="@string/hongbao"/>
        </LinearLayout>
    </LinearLayout>
    <ListView
        android:id="@id/lv_videomode_friendlist"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
</LinearLayout>