<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alienleeh.familychat.ui.activity.MainActivity">
    <com.alienleeh.familychat.customUI.MyViewPager
        android:id="@id/main_vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </com.alienleeh.familychat.customUI.MyViewPager>
<LinearLayout
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="62dp"
    android:orientation="horizontal"
    android:paddingTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:visibility="visible"
    android:background="@drawable/shape_tab_bottom">
    <LinearLayout
        android:id="@id/ll_videopage"
        style="@style/container_tabpage">
        <ImageView
            android:id="@id/iv_video"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_ondemand_video_brown_200_18dp"/>
        <TextView
            android:id="@id/tv_changeto_videopage"
            style="@style/text_pagetab"
            android:text="@string/mode_video_chat" />
    </LinearLayout>
    <LinearLayout
        android:id="@id/ll_messagepage"
        style="@style/container_tabpage">
        <ImageView
            android:id="@id/iv_message"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_message_brown_200_18dp"/>
        <TextView
            android:id="@id/tv_changeto_messagepage"
            style="@style/text_pagetab"
            android:text="@string/mode_text_chat"/>
    </LinearLayout>
    <LinearLayout
        android:id="@id/ll_functionpage"
        style="@style/container_tabpage">
        <ImageView
            android:id="@id/iv_function"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/ic_pages_brown_200_18dp"/>
        <TextView
            android:id="@id/tv_changeto_functionpage"
            style="@style/text_pagetab"
            android:text="@string/mode_setting" />
    </LinearLayout>
</LinearLayout>
</RelativeLayout>
