<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:background="@drawable/bg_info_function">
        <TextView
            android:id="@id/mynick_functionpage"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="18sp" />
        <TextView
            android:id="@id/myinfo_functionpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/mynick_functionpage"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="19dp"
            android:textColor="#ffffff"
            android:text="年龄  地址"
            android:textSize="18sp"/>
        <ImageView
            android:id="@id/mygender_functionpage"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_toRightOf="@id/mynick_functionpage"
            android:layout_alignTop="@id/mynick_functionpage"
            android:layout_marginLeft="7dp"
            android:src="@drawable/male"/>
        <com.alienleeh.mylibrary.customUI.CircleImageView
            android:id="@id/civ_entrance_setavatar"
            android:background="@drawable/shape_circle"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/civ_entrance_setavatar"
            android:layout_centerHorizontal="true"
            android:text="(可设置)"/>
        <TextView
            android:id="@+id/gexingqianming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/mynick_functionpage"
            android:layout_marginRight="40dp"
            android:layout_alignParentRight="true"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="个性签名"/>
        <TextView
            android:id="@id/mysign_functionpage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/civ_entrance_setavatar"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="5dp"
            android:textColor="#ffffff"
            android:text="世事洞穿
            　童心不泯."
            android:layout_below="@id/gexingqianming"/>
    </RelativeLayout>
    <ScrollView
        android:id="@id/sv_function"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#f1fcff">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="#ffffff"
                android:orientation="vertical">
                <LinearLayout
                    style="@style/list_in_function"
                    android:id="@id/item_func_personal">
                    <ImageView
                        style="@style/icon_function"
                        android:src="@drawable/personal_set"/>
                    <TextView
                        style="@style/text_func_item"
                        android:text="@string/personal_set"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="#ffffff"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/list_in_function"
                    android:id="@id/item_func_localvideo">
                    <ImageView
                        style="@style/icon_function"
                        android:src="@drawable/localvideorecord_48"/>
                    <TextView
                        style="@style/text_func_item"
                        android:text="@string/local_video"/>
                </LinearLayout>

                <View style="@style/divider_custom"/>
                <LinearLayout
                    style="@style/list_in_function"
                    android:id="@id/item_func_gaoduan_setting">
                    <ImageView
                        style="@style/icon_function"
                        android:src="@drawable/config_48"/>
                    <TextView
                        style="@style/text_func_item"
                        android:text="@string/gaoduan_setting"/>
                </LinearLayout>

                <View style="@style/divider_custom"/>
                <LinearLayout
                    style="@style/list_in_function"
                    android:id="@id/item_func_nettest">
                    <ImageView
                        style="@style/icon_function"
                        android:src="@drawable/alphachannel_48"/>
                    <TextView
                        style="@style/text_func_item"
                        android:text="@string/net_test"/>
                </LinearLayout>

                <View style="@style/divider_custom"/>
                <LinearLayout
                    style="@style/list_in_function"
                    android:id="@id/item_func_github">
                    <ImageView
                        style="@style/icon_function"
                        android:src="@drawable/github"/>
                    <TextView
                        style="@style/text_func_item"
                        android:text="Author's Github"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="64dp"
        android:background="#f1fcff">
        <Button
            android:id="@id/bt_function_exit"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/selector_button_exit"
            android:text="@string/text_button_exit"
            android:textSize="20sp"/>
    </RelativeLayout>
</LinearLayout>